EnergyCorrelatorsJets/LargeRLCaloENC/src/build/compile_error.txt
make  all-am
make[1]: Entering directory `/gpfs/mnt/gpfs02/sphenix/user/sgross/sphenix_analysis/EnergyCorrelatorsJets/LargeRLCaloENC/src/build'
/bin/sh ./libtool  --tag=CXX   --mode=compile /cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/opt/sphenix/core/gcc/12.1.0-57c96/x86_64-centos7/bin/g++ -DPACKAGE_NAME=\"largerlenc\" -DPACKAGE_TARNAME=\"largerlenc\" -DPACKAGE_VERSION=\"1.00\" -DPACKAGE_STRING=\"largerlenc\ 1.00\" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DPACKAGE=\"largerlenc\" -DVERSION=\"1.00\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -I. -I..  -I/sphenix/user/sgross/install_dir/include -I/cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/release/release_ana/ana.448/include -isystem/cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/opt/sphenix/core/root-6.26.06.p01/include   -g -O2 -std=c++17 -Wall -Werror -MT LargeRLENC.lo -MD -MP -MF .deps/LargeRLENC.Tpo -c -o LargeRLENC.lo ../LargeRLENC.cc
libtool: compile:  /cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/opt/sphenix/core/gcc/12.1.0-57c96/x86_64-centos7/bin/g++ -DPACKAGE_NAME=\"largerlenc\" -DPACKAGE_TARNAME=\"largerlenc\" -DPACKAGE_VERSION=\"1.00\" "-DPACKAGE_STRING=\"largerlenc 1.00\"" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DPACKAGE=\"largerlenc\" -DVERSION=\"1.00\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -I. -I.. -I/sphenix/user/sgross/install_dir/include -I/cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/release/release_ana/ana.448/include -isystem/cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/opt/sphenix/core/root-6.26.06.p01/include -g -O2 -std=c++17 -Wall -Werror -MT LargeRLENC.lo -MD -MP -MF .deps/LargeRLENC.Tpo -c ../LargeRLENC.cc  -fPIC -DPIC -o .libs/LargeRLENC.o
../LargeRLENC.cc: In member function 'void LargeRLENC::SingleCaloENC(std::map<std::array<float, 3>, float>, float, std::array<float, 3>, bool, bool, std::map<int, std::pair<float, float> >, int, float*)':
../LargeRLENC.cc:681:30: error: qualified-id in declaration before '(' token
  681 | void LargeRLENC::CalculateENC(std::pair<std::array<float, 3>, float> point_1, std::pair<std::array<float, 3>, float> point_2, std::map<std::array<float, 3>, float> cal, std::pair<float, std::pair<float, float>>* enc_out, std::pair<float, std::vector< std::pair< std::pair<float, float>, float > > > *threept_full, bool transverse, bool energy)
      |                              ^
../LargeRLENC.cc:711:23: error: qualified-id in declaration before '(' token
  711 | float LargeRLENC::getR(float eta1, float phi1, float eta2, float phi2, bool print)
      |                       ^
../LargeRLENC.cc:720:23: error: qualified-id in declaration before '(' token
  720 | void LargeRLENC::Print(const std::string &what) const
      |                       ^
../LargeRLENC.cc:754:2: error: expected '}' at end of input
  754 | }
      |  ^
../LargeRLENC.cc:648:9: note: to match this '{'
  648 |         {
      |         ^
../LargeRLENC.cc:754:2: error: expected '}' at end of input
  754 | }
      |  ^
../LargeRLENC.cc:440:1: note: to match this '{'
  440 | {
      | ^
make[1]: *** [LargeRLENC.lo] Error 1
make[1]: Leaving directory `/gpfs/mnt/gpfs02/sphenix/user/sgross/sphenix_analysis/EnergyCorrelatorsJets/LargeRLCaloENC/src/build'
make: *** [all] Error 2
